Description
We had several regressions since we based what the LDR exposes to apps based on the manifests they have embedded (since 0.4.13-dev-986-g029b8f2 )
E.g: CORE-16630, CORE-16405, CORE-16506, CORE-16563.
Most likely these won't be the last
It is very sad, that we then experience a lot of crashes, since the apisets are stubbed very sparsely only atm. And that for apps that would run absolutely without any issues in Windows XP/2003SP2 even (and up to 0.4.13-dev-985-gcbf4784).
We can not leave it like that and just wait until all apisets are fully implemented.
There is a shim layer called IgnoreManifestCompatVersion that can be set on the application (heuristic active, but opt-out per application).
It would be more convenient to have a button or checkbox for this on the compatibility tab, or at least a registry setting (global out heuristic, which still allows opt-in appcompat per app).
Attachments
Issue Links
- relates to
-
CORE-17383 Apisets Pseudo-Regression, 360 Safe Explorer (not Extreme) 12.2.1678.0 Installer doesn't work
- Reopened
-
CORE-16420 Apisets Pseudo-Regression, 360 Extreme Explorer 11.0.2216.0 fails to install
- Resolved
-
CORE-16630 Apisets Pseudo-Regression, our loader exposing more Vista+ stuff now makes MSVCPP2017 crash due to missing export api-ms-win-appmodel-runtime-l1-1-1.DLL GetCurrentPackageId()
- Resolved
-
CORE-17095 Apisets Pseudo-Regression, Minecraft Crashes, when Vista+ apisets get exposed based on manifest
- Resolved
-
CORE-13231 Support apisets/api-forwarders
- Resolved
-
CORE-16700 Apisets Pseudo-Regression, Firefox crashes during startup with exception due to frequent calls to _seh_filter_dll()
- Open
-
CORE-14532 Apisets Pseudo-Regression, Far manager setup regression
- Resolved
-
CORE-16563 Apisets Pseudo-Regression, Far Manager main app does not longer start up
- Resolved
-
CORE-16707 Apisets Pseudo-Regression, Motorbike game crashes at start
- Resolved