[0.4.13][NTDLL] Add policy kill-switch for manifest based automatic shimming CORE-16631

cherry picked from commit 0.4.14-dev-845-g
8381e29467be1a80b6dce7109925557835ccb54a